--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Evolving Strategies in Amblyopia Management</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bynocs | Amblyopia Management</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>Evolving Strategies in Amblyopia Management</h1>
-    
-    <h2>Abstract</h2>
-    <p>
-        Amblyopia, commonly referred to as "lazy eye," is a prevalent visual disorder affecting children and, in some cases, adults.
-        Traditional treatments, including occlusion therapy and pharmacological approaches, have demonstrated efficacy but also face
-        limitations related to adherence, age dependency, and recurrence rates.
-        This narrative review explores evolving strategies in amblyopia management, from conventional therapies to emerging innovations.
-        Dichoptic therapy, which leverages binocular visual stimulation, represents a paradigm shift by directly addressing neural
-        suppression and improving stereopsis.
-        Technological advancements, such as virtual reality (VR), AI, and eye-tracking technologies, have further revolutionized
-        treatment approaches, enhancing compliance and enabling personalized care.
-        Additionally, recent research in neuroplasticity has opened new avenues for treating adult amblyopia, challenging previous
-        assumptions about its irreversibility.
-        Despite these advancements, challenges persist in treatment standardization, accessibility, and long-term efficacy.
-        <a href="#">Read More</a>
+<body class="bg-gradient-to-b from-cyan-100 to-cyan-200 font-sans">
+
+  <!-- Hero Section -->
+  <section class="relative bg-gradient-to-r from-cyan-400 to-blue-500 text-white pb-10">
+    <div class="max-w-6xl mx-auto px-4 pt-10 flex flex-col items-center">
+      <img src="https://via.placeholder.com/180x60?text=BYNOCS+Logo" alt="Bynocs Logo" class="h-16 mb-6" />
+      <img src="https://via.placeholder.com/300x120?text=BYNOCS+Glasses" alt="Bynocs Glasses" class="h-32" />
+    </div>
+  </section>
+
+  <!-- Content Section 1 -->
+  <section class="max-w-5xl mx-auto px-4 py-10">
+    <h2 class="text-2xl font-bold text-gray-800 mb-2">
+      Title: Evolving Strategies in Amblyopia Management
+    </h2>
+    <h3 class="text-lg font-semibold text-gray-700 mb-2">Abstract:</h3>
+    <p class="text-gray-700 leading-relaxed">
+      Amblyopia, commonly referred to as "lazy eye," is a prevalent visual disorder affecting children and, in some cases, adults. Traditional treatments, including occlusion therapy and pharmacological approaches, have demonstrated efficacy but also face limitations related to adherence, age dependency, and recurrence rates.
+      This narrative review explores evolving strategies in amblyopia management, from conventional therapies to emerging innovations. Dichoptic therapy, which leverages binocular visual stimulation, represents a paradigm shift by directly addressing neural suppression and improving stereopsis.
+      Technological advancements, such as virtual reality (VR), AI, and eye-tracking technologies, have further revolutionized treatment approaches, enhancing compliance and enabling personalized care. Additionally, recent research in neuroplasticity has opened new avenues for treating adult amblyopia, challenging previous assumptions about its irreversibility. Despite these advancements, challenges persist in treatment standardization, accessibility, and long-term efficacy.
     </p>
+    <a href="#" class="text-red-600 font-semibold mt-4 inline-block hover:underline">Read More</a>
+  </section>
+
+  <!-- Content Section 2 -->
+  <section class="max-w-5xl mx-auto px-4 py-10">
+    <h2 class="text-2xl font-bold text-gray-800 mb-2">
+      Title: Dichoptic Therapy Effective for Mild to Moderate Amblyopia in South India
+    </h2>
+    <h3 class="text-lg font-semibold text-gray-700 mb-2">Abstract:</h3>
+    <p class="text-gray-700 leading-relaxed">
+      A study from South India found that dichoptic therapy using the Bynocs AmblyGo platform significantly improved visual acuity, binocular vision, and stereopsis in patients with mild to moderate amblyopia—especially in those who didn’t fully respond to patching. Over 98% showed improvement in at least one visual function.
+    </p>
+    <a href="#" class="text-red-600 font-semibold mt-4 inline-block hover:underline">Read More</a>
+  </section>
+
 </body>
 </html>
