--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- Hero Section -->
   <section class="relative bg-gradient-to-r from-cyan-400 to-blue-500 text-white pb-10">
     <div class="max-w-6xl mx-auto px-4 pt-10 flex flex-col items-center">
-      <img src="https://via.placeholder.com/180x60?text=BYNOCS+Logo" alt="Bynocs Logo" class="h-16 mb-6" />
-      <img src="https://via.placeholder.com/300x120?text=BYNOCS+Glasses" alt="Bynocs Glasses" class="h-32" />
+      <img src="./assets/img/logo.png" alt="Bynocs Logo" class="h-16 mb-6" />
+      <img src="./assets/img/bynocsanaglyphglasses-.png" alt="Bynocs Glasses" class="h-32" />
     </div>
   </section>
 
@@ -27,7 +27,7 @@
       This narrative review explores evolving strategies in amblyopia management, from conventional therapies to emerging innovations. Dichoptic therapy, which leverages binocular visual stimulation, represents a paradigm shift by directly addressing neural suppression and improving stereopsis.
       Technological advancements, such as virtual reality (VR), AI, and eye-tracking technologies, have further revolutionized treatment approaches, enhancing compliance and enabling personalized care. Additionally, recent research in neuroplasticity has opened new avenues for treating adult amblyopia, challenging previous assumptions about its irreversibility. Despite these advancements, challenges persist in treatment standardization, accessibility, and long-term efficacy.
     </p>
-    <a href="#" class="text-red-600 font-semibold mt-4 inline-block hover:underline">Read More</a>
+    <a href="https://assets.cureus.com/uploads/review_article/pdf/386016/20250715-120812-5hfcjr.pdf" class="text-red-600 font-semibold mt-4 inline-block hover:underline">Read More</a>
   </section>
 
   <!-- Content Section 2 -->
@@ -39,7 +39,7 @@
     <p class="text-gray-700 leading-relaxed">
       A study from South India found that dichoptic therapy using the Bynocs AmblyGo platform significantly improved visual acuity, binocular vision, and stereopsis in patients with mild to moderate amblyopia—especially in those who didn’t fully respond to patching. Over 98% showed improvement in at least one visual function.
     </p>
-    <a href="#" class="text-red-600 font-semibold mt-4 inline-block hover:underline">Read More</a>
+    <a href="https://journals.healio.com/doi/10.3928/01913913-20240521-03" class="text-red-600 font-semibold mt-4 inline-block hover:underline">Read More</a>
   </section>
 
 </body>
